# docker-spark-lab

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/input/: sample_data.json
src/: __init__.py  helpers.py  main.py
