[project]
name = "docker-spark-lab"
version = "0.1.0"
description = "A docker lab environment for experimenting with PySpark"
authors = [{ name = "Emiiano Frigo" }]
dependencies = ["pyspark==3.5.1"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black==24.3.0", "isort==5.10.1", "pylint==3.0.3", "pre-commit==3.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
